
  - When replacing the target text with a match, the number substitution
could fail with duplicate numbers

  - Word document properties are not translated
  https://sourceforge.net/p/omegat/bugs/828/

----------------------------------------------------------------------
 OmegaT 3.6.0 update 2
----------------------------------------------------------------------
  3 Enhancements
  4 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 2 vs 3.6.0 update 1

  Implemented requests:

  - Make SRT filter robust against inconsistent EOL chars
  https://sourceforge.net/p/omegat/feature-requests/1255/

  Other changes:

  - In the Nbsp script, % was added to the list of characters that
must be preceded by a non-breaking space

  - The Windows setup program can now be launched in any of the 
supported languages, regardless of the languages installed in Windows

  Bug fixes:

  - When the text color is customized, the caret color does not match
  https://sourceforge.net/p/omegat/bugs/811/

  - Some markers throw NPE when source text is not shown in editor
  https://sourceforge.net/p/omegat/bugs/818/

  - Team projects: Improved error handling for Subversion

  - In the script search_replace.groovy, the values entered in the form
were not taken into account, only the predefined values were used

----------------------------------------------------------------------
 OmegaT 3.6.0 update 1 (2016-04-07)
----------------------------------------------------------------------
  2 Enhancements
  1 Bug fix
  1 Localisation update
----------------------------------------------------------------------
3.6.0 update 1 vs 3.6.0

  Implemented requests:  

  - Improve handling of tags and custom tags for RTL languages
  https://sourceforge.net/p/omegat/feature-requests/1221/

  - Add Insert Unicode Control Character menu and right-click menu
  https://sourceforge.net/p/omegat/feature-requests/1222/

  Bug fixes:
